# trello-clone-api

./: .env.template  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
tests/: test_trello_clone_api.py
trello_clone_api/: enums.py  main.py  models.py  schemas.py  serializers.py  services.py
trello_clone_api/db/: base.py
trello_clone_api/routers/: boards.py  cards.py  projects.py  tasks.py
trello_clone_api/services/: board.py  card.py  project.py  task.py
